Replaced PNG Import button with Label and styled. Trying cache busting (Not working)

--- a/styles/style.css
+++ b/styles/style.css
@@ -164,6 +164,13 @@ a.navbar-brand img {
 	width: 60%;
 }
 
+.label-button {
+    border: solid 2px black !important;
+    border-radius: 0px !important;
+    background-color: #f0f0f0;
+    height: 45px;
+}
+
 /*
 
 Media Styles
