--- a/styles/style.css
+++ b/styles/style.css
@@ -94,13 +94,13 @@ div#toolbox {
 	margin-bottom: 20px;
 }
 
-#output-container, #mask-output-container {
+#output-container, #mask-output-container, #interleave-output-container {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 }
 
-#sprite-output, #mask-output {
+#sprite-output, #mask-output, #interleaved-output {
 	font-size: 10px;
 	font-family: courier, courier new, serif;
 	margin-left: 10px;
@@ -176,7 +176,7 @@ a.navbar-brand img {
     height: 45px;
 }
 
-.output-format {
+.options-title-class {
 	font-weight: bold;
 }
 
